hphp/test/slow/function_no_param_modifier.php.expectf
Fatal error: syntax error, unexpected T_PUBLIC, expecting %s in %s/test/slow/function_no_param_modifier.php on line 6
